config/task-manager/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: task-manager
spec:
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 3000
