config/task-manager/frontend/httproute-frontend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: task-manager-frontend
  namespace: task-manager
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: http
  hostnames:
    - task-manager.golden-horde.ir
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 3000
